tests/baselines/reference/for-of11.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of11.ts(2,12): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/es6/for-ofStatements/for-of11.ts (1 errors) ====
    var v: string;
    for (v of [0, ""]) { }
               ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6501 /.ts/lib.es5.d.ts:444:5: The expected type comes from this index signature.